--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8080:80"
 
-  users:
+  backend:
     build: ./backend
     image: cpf/backend
     container_name: cpf-backend
@@ -18,7 +18,7 @@ services:
     links:
       - db
     environment:
-      VIRTUAL_HOST: users.local
+      VIRTUAL_HOST: cpf-backend.local
 
   db:
     image: mongo:3.6.0-jessie
