--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,70 @@
 version: '3'
 services:
-  proxy:
-    image: jwilder/nginx-proxy
-    container_name: cpf-proxy
-    volumes:
-      - /var/run/docker.sock:/tmp/docker.sock:ro
+
+  nginx:
+    restart: always
+    image: nginx
+    container_name: nginx
     ports:
-      - "8080:80"
+      - "80:80"
+      - "443:443"
+    volumes:
+      - conf-d:/etc/nginx/conf.d
+      - vhost-d:/etc/nginx/vhost.d
+      - nginx-html:/usr/share/nginx/html
+      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
+
+  nginx-gen:
+    restart: always
+    image: jwilder/docker-gen
+    container_name: nginx-gen
+    volumes:
+      - conf-d:/etc/nginx/conf.d
+      - vhost-d:/etc/nginx/vhost.d
+      - nginx-html:/usr/share/nginx/html
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
+    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+
+  letsencrypt-nginx-proxy-companion:
+    restart: always
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt-nginx-proxy-companion
+    links:
+      - nginx
+    volumes:
+      - conf-d:/etc/nginx/conf.d
+      - vhost-d:/etc/nginx/vhost.d
+      - nginx-html:/usr/share/nginx/html
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
+    environment:
+      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+
   api:
+    restart: always
     build: ./api
     image: cpf/api
     container_name: cpf-api
     depends_on:
       - db
-      - proxy
     links:
       - db
     environment:
-      VIRTUAL_HOST: cpf-api.local
+      - VIRTUAL_HOST=cpfapi.mydomain.org
+      - VIRTUAL_NETWORK=nginx-proxy
+      - VIRTUAL_PORT=3000
+      - LETSENCRYPT_HOST=cpfapi.mydomain.org
+      - LETSENCRYPT_EMAIL=cpfapi@mydomain.org
+
   db:
     image: mongo:3.6.0-jessie
     container_name: cpf-db
     volumes:
       - ./backup:/backup:rw
+
+volumes:
+  conf-d:
+  vhost-d:
+  nginx-html:
+  
