--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - conf-d:/etc/nginx/conf.d
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
-      - "./volumes/proxy/certs:/etc/nginx/certs:ro"
+      - "./proxy/certs:/etc/nginx/certs:ro"
 
   nginx-gen:
     restart: always
@@ -23,7 +23,7 @@ services:
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./volumes/proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
+      - "./proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   letsencrypt-nginx-proxy-companion:
@@ -37,7 +37,7 @@ services:
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./volumes/proxy/certs:/etc/nginx/certs:rw"
+      - "./proxy/certs:/etc/nginx/certs:rw"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
