--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
       - "./proxy/certs:/etc/nginx/certs:ro"
+      - "./proxy/htpasswd:/etc/nginx/htpasswd:ro"
 
   nginx-gen:
     restart: always
