--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - conf-d:/etc/nginx/conf.d
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
+      - "./proxy/certs:/etc/nginx/certs:ro"
       - "/var/run/docker.sock:/tmp/docker.sock:ro"
       - "./proxy/templates/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
     entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
@@ -37,8 +38,8 @@ services:
       - conf-d:/etc/nginx/conf.d
       - vhost-d:/etc/nginx/vhost.d
       - nginx-html:/usr/share/nginx/html
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./proxy/certs:/etc/nginx/certs:rw"
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
@@ -59,6 +60,7 @@ services:
       - LETSENCRYPT_EMAIL=cpfapi@mydomain.org
 
   db:
+    restart: always
     image: mongo:3.6.0-jessie
     container_name: cpf-db
     volumes:
