--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,6 @@ version: '3'
 services:
 
   nginx:
-    restart: always
     image: nginx
     container_name: cpf-nginx
     ports:
@@ -16,7 +15,6 @@ services:
       - "./proxy/htpasswd:/etc/nginx/htpasswd:ro"
 
   nginx-gen:
-    restart: always
     image: jwilder/docker-gen
     container_name: cpf-nginx-gen
     volumes:
@@ -29,7 +27,6 @@ services:
     entrypoint: /usr/local/bin/docker-gen -notify-sighup cpf-nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   letsencrypt-nginx-proxy-companion:
-    restart: always
     image: jrcs/letsencrypt-nginx-proxy-companion
     container_name: cpf-letsencrypt-nginx-proxy-companion
     links:
@@ -44,7 +41,6 @@ services:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
   api:
-    restart: always
     build: ./api
     image: cpf/api
     container_name: cpf-api
@@ -52,6 +48,8 @@ services:
       - db
     links:
       - db
+    volumes:
+      - html-public:/root/public
     environment:
       - VIRTUAL_HOST=cpfapi.mydomain.org
       - VIRTUAL_NETWORK=nginx-proxy
@@ -60,28 +58,26 @@ services:
       - LETSENCRYPT_EMAIL=cpfapi@mydomain.org
 
   db:
-    restart: always
     image: mongo:3.6.0-jessie
     container_name: cpf-db
     volumes:
       - ./backup:/backup:rw
 
   frontend:
-    restart: always
     build: ./frontend
     image: cpf/frontend
     container_name: cpf-frontend
-    links:
-      - api
-    environment:
-      - VIRTUAL_HOST=cpf.mydomain.org
-      - VIRTUAL_NETWORK=nginx-proxy
-      - VIRTUAL_PORT=3000
-      - LETSENCRYPT_HOST=cpfapi.mydomain.org
-      - LETSENCRYPT_EMAIL=cpfapi@mydomain.org
+    volumes:
+      - html-public:/home/node/public
+    #environment:
+      #- VIRTUAL_HOST=cpf.mydomain.org
+      #- VIRTUAL_NETWORK=nginx-proxy
+      #- VIRTUAL_PORT=3000
+      #- LETSENCRYPT_HOST=cpfapi.mydomain.org
+      #- LETSENCRYPT_EMAIL=cpfapi@mydomain.org
 
 volumes:
   conf-d:
   vhost-d:
   nginx-html:
-  
+  html-public:
